# affraytrace

./: .gitignore  CMakeLists.txt
examples/: simple_spheres.xml
include/: Camera.h  Colour.h  Hit.h  Image.h  Interval.h  Material.h  Random.h  Ray.h  Scene.h  SceneObject.h  Utils.h  Vec3.h
src/: Camera.cpp  Hit.cpp  Image.cpp  Interval.cpp  Material.cpp  Random.cpp  Ray.cpp  Scene.cpp  SceneObject.cpp  Utils.cpp  main.cpp
test/: Image.test.cpp
